fix: footer alignment temporary

--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,6 +1,7 @@
 .cart-wrapper {
   width: 90%;
   margin: 5rem auto 7rem auto;
+  flex-grow: 1;
 }
 
 .cart-heading {
@@ -64,7 +65,7 @@
 
 .cart-price-container .ecomm-billing-card {
   width: 100%;
-  margin-top:3.2rem;
+  margin-top: 3.2rem;
 }
 
 .ecomm-billing-card .billing-card-title {
